--- a/GE.WebUI/Content/less/list-news.less
+++ b/GE.WebUI/Content/less/list-news.less
@@ -63,7 +63,7 @@
 
 .list-news figure > img {
     height: 100%;
-    .centerHorizontal;
+    /*.centerHorizontal;*/
     @media (max-width: @screen-xs-max) {
         height:auto;
         width:100%;
