--- a/GE.WebUI/Content/less/tags-cloud.less
+++ b/GE.WebUI/Content/less/tags-cloud.less
@@ -3,12 +3,15 @@
 @import (reference) "../../bower_components/bootstrap/less/variables.less";
 
 @cloud-color: #31B0D5;
-
+.tags-block{
+    background-color:@color-white;
+    margin-top:@def-pad*2;
+    padding:@def-pad;
+}
 .tags-cloud {
     list-style: none;
     padding: 0;
     margin: 0;
-    margin-top: @def-pad;
     display: inline-block;
 }
 
