--- a/GE.WebUI/Views/Shared/_LikeMaterial.cshtml
+++ b/GE.WebUI/Views/Shared/_LikeMaterial.cshtml
@@ -33,7 +33,7 @@
                                 break;
                         }
                         <div class="col-md-4">
-                            <div class="like-mat">
+                            <div class="like-mat" onclick="changeLocation(this)" title="@item.Title" >
                                 <div><time>@item.DateCreate</time></div>
                                 <div><a href="@url">@item.Title</a></div>
                                 <p>@item.Foreword</p>
