--- a/GE.WebUI/Content/less/like-mats.less
+++ b/GE.WebUI/Content/less/like-mats.less
@@ -3,14 +3,20 @@
 @import (reference) "positioned.less";
 @import (reference) "../../bower_components/bootstrap/less/variables.less";
 
+.like-mats{
+    background-color:@color-white;
+    padding:@def-pad;
+    margin-top:@def-pad*2;
+}
 .like-mats .like-mat {
     font-size: 14px;
     height: 100%;
     display: inline-table;
-    background-color: #f5f5f5;
+    background-color: @color-white;
     padding: 10px 10px 30px;
     width: 100%;
     position: relative;
+    box-shadow: -1px 1px 5px rgba(0,0,0,0.2);
 
     @media (max-width: @screen-xs-max) {
         display: block;
@@ -26,6 +32,11 @@
 
     @media (min-width: @screen-lg-min) {
     }
+}
+
+.like-mats .like-mat:hover{
+    cursor:pointer;
+    box-shadow: -1px 1px 6px rgba(0,0,0,0.2);
 }
 
 .like-mats .like-mat a {
