--- a/GE.WebAdmin/Content/sx/less/sx-grid-view.less
+++ b/GE.WebAdmin/Content/sx/less/sx-grid-view.less
@@ -45,6 +45,10 @@
     text-align: center;
 }
 
+.sx-gv-edit-column form{
+    float:left;
+}
+
 .sx-gv tfoot td:first-child {
     text-align: center;
 }
