--- a/GE.WebAdmin/Content/sx/less/sx-find-table.less
+++ b/GE.WebAdmin/Content/sx/less/sx-find-table.less
@@ -11,6 +11,7 @@
     background-color: @color-white;
     z-index: 1;
     width: 100%;
+    box-shadow: -1px 1px 7px rgba(0,0,0,0.2);
 }
 
 .sx-find-table .dropdown thead th {
@@ -22,4 +23,8 @@
     padding: 2px 2px 2px 10px;
     width: 100%;
     font-weight: normal;
+}
+
+.sx-find-table .data-text-field{
+    cursor:default;
 }
