--- a/GE.WebAdmin/Views/NewsRubrics/FindTable.cshtml
+++ b/GE.WebAdmin/Views/NewsRubrics/FindTable.cshtml
@@ -1,16 +1,10 @@
-﻿@model SxExtantions.SxPagedCollection<VMPicture>
+﻿@model SxExtantions.SxPagedCollection<VMNewsRubric>
 @{
     Layout = null;
 }
 <table class="table table-condensed table-responsive table-hover table-bordered">
     <thead>
         <tr>
-            <th style="width:100px;">
-                <input type="text" />
-            </th>
-            <th>
-                <input type="text" />
-            </th>
             <th>
                 <input type="text" />
             </th>
@@ -21,11 +15,7 @@
         {
             var item = Model.Collection[i];
             <tr data-id="@item.Id">
-                <td>@item.Width x @item.Height</td>
-                <td data-text-field>@item.Caption</td>
-                <td style="text-align:center;">
-                    <img alt="@item.Caption" src="@Url.Action(MVC.Pictures.Picture(item.Id, height:30))" />
-                </td>
+                <td data-text-field>@item.Description</td>
             </tr>
         }
     </tbody>
@@ -33,7 +23,7 @@
     {
         <tfoot>
             <tr>
-                <td colspan="3">
+                <td colspan="1">
                     @Html.SxPager(Model.PagerInfo)
                 </td>
             </tr>
