--- a/GE.WebAdmin/Views/Manuals/Index.cshtml
+++ b/GE.WebAdmin/Views/Manuals/Index.cshtml
@@ -9,6 +9,9 @@
         <div class="col-md-2 scrollspy">
             <ul id="nav" class="list-unstyled hidden-xs hidden-sm" data-spy="affix">
                 <li>
+                    <a href="#news-rubrics"> Рубрики новостей</a>
+                </li>
+                <li>
                     <a href="#user-roles"> Система доступа</a>
                     <ul class="list-unstyled">
                         <li>
@@ -42,6 +45,13 @@
         </div>
         <div class="col-md-10">
             <div class="html">
+                <section>
+                    <div id="news-rubrics">
+                        <h2 class="text-primary">Рубрики новостей</h2>
+                        <p>Новости сайта разделены по  группам. Первыми представлны новости сайта, содержащие описания новостей игр. Новости прицеплены к игре. В левом блоке указаны по одной новости для каждой конкретной игры. </p>
+                        <p>Вторая группа новостей - это, новости, разбитые на рубрики. Рубрики формируются динамически и задаются в админке. Чтобы новость была привязана к конкретной рубрике, для нее при редактировании эту рубрику нужно указать. В левом блоке новостей игр содержаться последние новости для соответствующей рубрики. Правый блок формируется на основе сгруппированного списка тегов материалов, которыми наделены новости данной рубрики (показываются последние n штук). Картинка для новостей в правом блоке задаются равными картинке последней новости для тега, для которого отображается новость.</p>
+                    </div>
+                </section>
                 <section>
                     <div id="user-roles">
                         <h2 class="text-primary">Система доступа</h2>
@@ -116,7 +126,6 @@
                         <p>Изменения в файле вступаю в силу в течение 15 мин.</p>
                     </div>
                 </section>
-
                 <section>
                     <div id="clicks">
                         <h2 class="text-primary">Статистика кликов</h2>
