--- a/GE.WebAdmin/Content/less/last-comments.less
+++ b/GE.WebAdmin/Content/less/last-comments.less
@@ -2,84 +2,89 @@
 @import (reference) "colors.less";
 @import (reference) "../../bower_components/bootstrap/less/variables.less";
 
-.lat-mat-comments{
+.lat-mat-comments {
+    margin-bottom: @def-pad*2;
+
     @media (max-width: @screen-xs-max) {
-        margin-bottom:@def-pad*2;
+        margin-bottom: 0;
     }
 
     @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
-        margin-bottom:@def-pad*2;
+        margin-bottom: 0;
     }
 
     @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
-         margin-bottom:@def-pad*2;
+        margin-bottom: 0;
     }
 
     @media (min-width: @screen-lg-min) {
     }
 }
 
-.lat-mat-comments .row{
-    display:table;
-    margin-bottom:@def-pad*2;
+.lat-mat-comments .row {
+    display: table;
+    margin-bottom: @def-pad*2;
+
     @media (max-width: @screen-xs-max) {
         display: block;
-        margin-bottom:0;
+        margin-bottom: 0;
     }
 
     @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
         display: block;
-        margin-bottom:0;
+        margin-bottom: 0;
     }
 
     @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
         display: block;
-        margin-bottom:0;
+        margin-bottom: 0;
     }
 
     @media (min-width: @screen-lg-min) {
     }
 }
 
-.lat-mat-comments .row:first-child{
-    margin-top:@def-pad*2;
+.lat-mat-comments .row:first-child {
+    margin-top: @def-pad*2;
+
     @media (max-width: @screen-xs-max) {
-        margin-top:0;
+        margin-top: 0;
     }
 
     @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
-        margin-top:0;
+        margin-top: 0;
     }
 
     @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
-        margin-top:0;
+        margin-top: 0;
     }
 
     @media (min-width: @screen-lg-min) {
     }
 }
 
-.lat-mat-comments .row > div{
-    display:table-cell;
-    float:none;
-    vertical-align:top;
-    height:100%;
+.lat-mat-comments .row > div {
+    display: table-cell;
+    float: none;
+    vertical-align: top;
+    height: 100%;
+
     @media (max-width: @screen-xs-max) {
         display: inline-block;
-        float:left;
-        width:100%;
+        float: left;
+        width: 100%;
     }
 
     @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
         display: inline-block;
-        float:left;
-        width:100%;
+        float: left;
+        width: 100%;
     }
 
     @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
         display: inline-block;
-        float:left;
-        width:100%;
+        float: left;
+        width: 100%;
     }
 
     @media (min-width: @screen-lg-min) {
@@ -94,25 +99,25 @@
     box-shadow: -1px 1px 4px rgba(0,0,0,0.1);
     padding: 10px;
     padding-bottom: 50px;
+
     @media (max-width: @screen-xs-max) {
-        margin-top:@def-pad*2;
+        margin-top: @def-pad*2;
     }
 
     @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
-        margin-top:@def-pad*2;
+        margin-top: @def-pad*2;
     }
 
     @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
-        margin-top:@def-pad*2;
+        margin-top: @def-pad*2;
     }
 
     @media (min-width: @screen-lg-min) {
     }
 }
 
-.lat-mat-comments .last-comment .redact-btn
-{
-    position:absolute;
-    bottom:0;
+.lat-mat-comments .last-comment .redact-btn {
+    position: absolute;
+    bottom: 0;
     padding: 0 0 10px;
 }
