--- a/GE.WebUI/Content/less/comments.less
+++ b/GE.WebUI/Content/less/comments.less
@@ -4,17 +4,84 @@
 @import (reference) "../../bower_components/bootstrap/less/variables.less";
 
 @avatar-size:100px;
+@cm-dark-color:#dce0e5;
 
+.comments{
+    background-color:@color-white;
+    margin-top:@def-pad*2;
+    padding:@def-pad;
+}
 .comment{
     margin-top:@def-pad;
 }
 
 .comment .c-u-info{
     text-align:center;
+    background-color:@cm-dark-color;
+    padding: 10px;
 }
 
 .comment .c-u-info .c-u-avatar{
     width:@avatar-size;
     height:@avatar-size;
     border:4px solid #b6bac8;
+}
+
+.comment .c-u-info .c-u-name{
+    font-size:18px;
+    margin-top:10px;
+}
+
+.comment .c-u-info .c-u-name:first-letter{
+    text-transform:uppercase;
+}
+
+.comment .c-u-info .c-u-details{
+    color:#7a7a7a;
+    font-size:11px;
+    font-style:italic;
+    text-align:left;
+    margin-top:10px;
+}
+
+.comment .c-u-info .c-u-details .row > div:last-child{
+   text-align:right;
+}
+
+.comment .c-u-info .c-u-details .c-u-rang{
+    color:@color-dark-blue;
+    font-size:15px;
+}
+
+.comment .c-content{
+    color:#7a7a7a;
+}
+
+.comment .c-content .c-txt{
+    margin-top:@def-pad;
+}
+
+.comment > .c-func{
+    background-color:@cm-dark-color;
+    text-align:right;
+}
+
+.comment > .c-func > ul{
+    list-style:none;
+    padding:0;
+    margin:0;
+    display:inline-block;
+    color:#727f8d;
+    font-style:italic;
+    line-height:30px;
+}
+
+.comment > .c-func > ul > li{
+    display:table-cell;
+}
+
+.comment > .c-func > ul > li > a{
+    color:inherit;
+    text-decoration:underline;
+    padding:0 10px;
 }
