--- a/GE.WebUI/Content/less/comments.less
+++ b/GE.WebUI/Content/less/comments.less
@@ -55,6 +55,25 @@
 
 .comment .c-content{
     color:#7a7a7a;
+    @media (max-width: @screen-xs-max) {
+        border-left:1px solid @cm-dark-color;
+        border-right:1px solid @cm-dark-color;
+        padding:@def-pad;
+    }
+
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+        border-left:1px solid @cm-dark-color;
+        border-right:1px solid @cm-dark-color;
+        padding:@def-pad;
+    }
+
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+        
+    }
+
+    @media (min-width: @screen-lg-min) {
+        
+    }
 }
 
 .comment .c-content .c-txt{
