--- a/GE.WebUI/Content/less/like-mats.less
+++ b/GE.WebUI/Content/less/like-mats.less
@@ -3,6 +3,29 @@
 @import (reference) "positioned.less";
 @import (reference) "../../bower_components/bootstrap/less/variables.less";
 
+.like{
+    @media (max-width: @screen-xs-max) {
+        margin-bottom:@def-pad;
+    }
+
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+        margin-bottom:@def-pad;
+    }
+
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+        display:inline-block;
+        margin-right:@def-pad*2;
+        top: 2px;
+        position: relative;
+    }
+
+    @media (min-width: @screen-lg-min) {
+        margin-right:@def-pad*2;
+        display:inline-block;
+        top: 2px;
+        position: relative;
+    }
+}
 .like-mats{
     background-color:@color-white;
     padding:@def-pad;
