--- a/GE.WebUI/Content/less/material.less
+++ b/GE.WebUI/Content/less/material.less
@@ -79,13 +79,16 @@
     }
 
     @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+        float:left;
+        margin-top:@def-pad;
     }
 
     @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+        margin-top:7px;
     }
 
     @media (min-width: @screen-lg-min) {
-        margin-top:5px;
+        margin-top:7px;
     }
 }
 
