--- a/GE.WebAdmin/Views/MenuItems/Edit.cshtml
+++ b/GE.WebAdmin/Views/MenuItems/Edit.cshtml
@@ -14,6 +14,12 @@
                 @Html.ValidationMessageFor(x => x.Caption)
             </div>
 
+            <div class="form-group">
+                @Html.LabelFor(x => x.Show, new { @class = "control-label" })
+                @Html.EditorFor(x => x.Show, new { htmlAttributes = new { @class = "form-control", @placeholder = "Введите название пункта меню" } })
+                @Html.ValidationMessageFor(x => x.Show)
+            </div>
+
             <!--title-->
             <div class="form-group">
                 @Html.LabelFor(x => x.Title, new { @class = "control-label" })
