--- a/GE.WebUI/Content/less/like-mats.less
+++ b/GE.WebUI/Content/less/like-mats.less
@@ -3,7 +3,7 @@
 @import (reference) "positioned.less";
 @import (reference) "../../bower_components/bootstrap/less/variables.less";
 
-.like{
+/*.like{
     @media (max-width: @screen-xs-max) {
         margin-bottom:@def-pad;
     }
@@ -25,7 +25,8 @@
         top: 2px;
         position: relative;
     }
-}
+}*/
+
 .like-mats{
     background-color:@color-white;
     padding:@def-pad;
