--- a/GE.WebUI/Content/less/material.less
+++ b/GE.WebUI/Content/less/material.less
@@ -27,11 +27,11 @@
     font-size: 16px;
 }
 
-.m-html > .f-picture{
-    max-width:100%;
-    margin-bottom:@def-pad*2;
-    margin-right:@def-pad*2;
-    float:left;
+.m-html > .f-picture {
+    max-width: 100%;
+    margin-bottom: @def-pad*2;
+    margin-right: @def-pad*2;
+    float: left;
 }
 
 .m-html h1, .m-html h2, .m-html h3, .m-html h4, .m-html h5, .m-html h6 {
@@ -47,7 +47,6 @@
 }
 
 .m-html h2 {
-    
 }
 
 .m-html h3 {
@@ -62,75 +61,94 @@
 .m-html h6 {
 }
 
-.m-info{
-    margin-top:@def-pad*2;
-    background-color:@color-white;
-    padding:10px @def-pad;
+.m-info {
+    margin-top: @def-pad*2;
+    background-color: @color-white;
+    padding: 10px @def-pad;
 }
 
-.m-info .mat-info{
-    list-style:none;
-    padding:0;
-    margin:0;
-    width:auto;
+.m-info .mat-info {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    width: auto;
+
     @media (max-width: @screen-xs-max) {
-        float:left;
-        margin-top:@def-pad;
+        float: left;
+        margin-top: @def-pad;
     }
 
     @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
-        float:left;
-        margin-top:@def-pad;
+        float: left;
+        margin-top: @def-pad;
     }
 
     @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
-        margin-top:7px;
+        margin-top: 7px;
     }
 
     @media (min-width: @screen-lg-min) {
-        margin-top:7px;
+        margin-top: 7px;
     }
 }
 
-.m-info .like i{
-    font-size:1.5em;
-    cursor:pointer;
-}
-.m-info .like i.up{
-    color:@color-green;
+.m-info .like i {
+    font-size: 1.5em;
+    cursor: pointer;
 }
 
-.m-info .like i.down{
-    color:@color-red;
+.m-info .like i.up {
+    color: @color-green;
 }
 
-.m-info .like span{
-    margin-left:10px;
-    font-size:1.2em;
-    font-weight:700;
+.m-info .like i.down {
+    color: @color-red;
 }
 
-.m-info .like span.up{
-    margin-right:@def-pad*2;
+.m-info .like span {
+    margin-left: 10px;
+    font-size: 1.2em;
+    font-weight: 700;
 }
 
-.mat-fwd{
-    margin:0;
-    padding:10px;
-    padding-bottom:@def-pad;
-    margin-top:@def-pad*2;
-    background-color:@color-white;
-    border-left-color:@color-red;
-    font-size:1em;
-    padding-right:@def-pad;
-    font-style:italic;
+.m-info .like span.up {
+    margin-right: @def-pad*2;
 }
 
-.mat-fwd > .ann{
-    font-style:normal;
+.mat-fwd {
+    margin: 0;
+    padding: 10px;
+    padding-bottom: @def-pad;
+    margin-top: @def-pad*2;
+    background-color: @color-white;
+    border-left-color: @color-red;
+    font-size: 1em;
+    padding-right: @def-pad;
+    font-style: italic;
+}
+
+.mat-fwd > .ann {
+    font-style: normal;
     margin-bottom: @def-pad;
 }
 
-.mat-fwd >.fwd{
-    font-size:16px;
+.mat-fwd > .fwd {
+    font-size: 16px;
+}
+
+.m-info .fa {
+    font-size: 18px;
+    margin-right: 5px;
+}
+
+.m-info .badge{
+    margin-left:5px;
+}
+
+.m-info .btn.up .fa, .m-info .btn.up .badge {
+    color: @color-green;
+}
+
+.m-info .btn.down .fa, .m-info .btn.down .badge {
+    color: @color-red;
 }
