--- a/GE.WebUI/Views/News/Details.cshtml
+++ b/GE.WebUI/Views/News/Details.cshtml
@@ -23,20 +23,7 @@
         @Html.Partial(MVC.Shared.Views._Share42, Model)
     </div>
 
-    <div class="m-info">
-        <div class="row">
-            <div class="col-md-6">
-                @Html.Partial(MVC.Likes.Views._Likes, Model)
-                <a href="/" class="btn btn-info" onclick="sendClickStat(this, '/', 1)">Это интересно!</a>
-                <a href="/" class="btn btn-info" onclick="sendClickStat(this, '/', 2)">Это не то, что я искал (</a>
-            </div>
-            <div class="col-md-6">
-                <div class="text-right">
-                    @Html.DisplayFor(x => Model.Info)
-                </div>
-            </div>
-        </div>
-    </div>
+    @Html.Partial(MVC.Shared.Views._MaterialInfo, Model)
     
     @Html.Action(MVC.MaterialTags.List(mid: Model.Id, mct: Model.ModelCoreType, maxFs: 30))
     @Html.Action("likematerials", new { controller = "news", materialId = Model.Id, modelCoreType = Model.ModelCoreType, amount=9 })
